--- a/src/assets/style/main-series.scss
+++ b/src/assets/style/main-series.scss
@@ -11,19 +11,13 @@
             width: calc(100% / 6);
             padding: 20px;
             text-align: left;
-            .img-dc {
-                width: 150px;
-                height: 150px;
-                background-image: url(https://www.dccomics.com/sites/default/files/styles/covers192x291/public/gn-covers/2018/08/AQMv4_UW_153-001_HD_5b7efa1745a9b8.08589135.jpg?itok=HPTtnrsb);
-                background-size: cover;
-                background-size: 90%;
-                background-repeat: no-repeat;
-                margin-bottom: 10px;
+            img {
+                width: 90%;
             }
             a {
                 text-decoration: none;
                 color: white;
-                font-size: 0.8rem;
+                font-size: 0.7rem;
             }
         }
     }
